add reviews page

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
         </header>
         <div class="features parent" id="features">
             <div class="container">
-                <h2 class="main-title">Features</h2>
+                <div class="main-title"><h2>Features</h2></div>
                 <ul>
                     <li class="card fade-in">
                         <h3>Privacy</h3>
@@ -294,7 +294,7 @@
         </div>
         <div class="faqs parent" id="faqs">
             <div class="container">
-                <h2 class="main-title filled">FAQs</h2>
+                <div class="main-title"><h2 class="filled">FAQs</h2></div>
                 <ul class="column">
                     <li class="from-left slide-in">
                         <div class="question">
@@ -492,7 +492,7 @@
             </div>
         </div>
         <div class="pricing parent" id="pricing">
-            <h2 class="main-title">Pricing Plans</h2>
+            <div class="main-title"><h2>Pricing Plans</h2></div>
             <div class="container">
                 <div class="box">
                     <div class="title">Free</div>
@@ -546,7 +546,7 @@
             </div>
         </div>
         <div class="stats parent" id="stats">
-            <h2 class="main-title">Our Awesome Stats</h2>
+            <div class="main-title"><h2>Our Awesome Stats</h2></div>
             <div class="container">
                 <div class="box">
                     <i class="far fa-user fa-2x fa-fw"></i>
@@ -567,6 +567,62 @@
                     <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
                     <span class="number" data-goal="500">0</span>
                     <span class="text">Money</span>
+                </div>
+            </div>
+        </div>
+        <div class="reviews parent" id="reviews">
+            <div class="main-title">
+                <h2>Reviews</h2>
+                <p>What People Are Saying</p>
+            </div>
+            <div class="container">
+                <div class="box">
+                    <img src="./images/Reviews/1.png" alt="person1" />
+                    <h3>Mohamed Farag</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="./images/Reviews/1.png" alt="person1" />
+                    <h3>Mohamed Farag</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus quaerat ducimus
+                    </p>
+                </div>
+                <div class="box">
+                    <img src="./images/Reviews/1.png" alt="person1" />
+                    <h3>Mohamed Farag</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus quaerat ducimus
+                    </p>
                 </div>
             </div>
         </div>
