review cards effect on hover

--- a/src/index.html
+++ b/src/index.html
@@ -576,7 +576,7 @@
                 <p>What People Are Saying</p>
             </div>
             <div class="container">
-                <div class="box">
+                <div class="card">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
@@ -592,7 +592,7 @@
                         est natus quaerat ducimus
                     </p>
                 </div>
-                <div class="box">
+                <div class="card">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
@@ -608,7 +608,23 @@
                         est natus quaerat ducimus
                     </p>
                 </div>
-                <div class="box">
+                <div class="card">
+                    <img src="./images/Reviews/1.png" alt="person1" />
+                    <h3>Mohamed Farag</h3>
+                    <span class="title">Full Stack Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet
+                        est natus quaerat ducimus
+                    </p>
+                </div>
+                <div class="card">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
