+ scroll animation 2 new ele, repair observerTest, center title

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     </head>
     <body>
         <div class="loading">
-            <div class="center">
+            <div class="center" id="testObserver">
                 <div class="loader"><span class="loader-inner"></span></div>
                 <h3>loading</h3>
             </div>
@@ -49,7 +49,7 @@
         <header class="parent" id="main">
             <nav class="topnav" id="topnav">
                 <div class="container">
-                    <div class="logo" id="testObserver" data-id="main">
+                    <div class="logo" data-id="main">
                         <div class="img">
                             <img src="./images/logo50.jpg" alt="imo logo" />
                         </div>
@@ -494,7 +494,7 @@
         <div class="pricing parent" id="pricing">
             <div class="main-title"><h2>Pricing Plans</h2></div>
             <div class="container">
-                <div class="box">
+                <div class="box from-left slide-in">
                     <div class="title">Free</div>
                     <img src="./images/Pricing/1.png" alt="" />
                     <div class="price">
@@ -510,7 +510,7 @@
                     </ul>
                     <a href="#">Choose Plan</a>
                 </div>
-                <div class="box popular">
+                <div class="box popular fade-in">
                     <div class="label">Most Popular</div>
                     <div class="title">Advanced</div>
                     <img src="./images/Pricing/2.png" alt="" />
@@ -527,7 +527,7 @@
                     </ul>
                     <a href="#">Choose Plan</a>
                 </div>
-                <div class="box">
+                <div class="box from-right slide-in">
                     <div class="title">Professional</div>
                     <img src="./images/Pricing/3.png" alt="" />
                     <div class="price">
@@ -548,22 +548,22 @@
         <div class="stats parent" id="stats">
             <div class="main-title"><h2>Our Awesome Stats</h2></div>
             <div class="container">
-                <div class="box">
+                <div class="box fade-in">
                     <i class="far fa-user fa-2x fa-fw"></i>
                     <span class="number" data-goal="1500">0</span>
                     <span class="text">Clients</span>
                 </div>
-                <div class="box">
+                <div class="box fade-in">
                     <i class="far fa-handshake fa-2x fa-fw"></i>
                     <span class="number" data-goal="13">0</span>
                     <span class="text">Partners</span>
                 </div>
-                <div class="box">
+                <div class="box fade-in">
                     <i class="fas fa-globe-asia fa-2x fa-fw"></i>
                     <span class="number" data-goal="50">0</span>
                     <span class="text">Countries</span>
                 </div>
-                <div class="box">
+                <div class="box fade-in">
                     <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
                     <span class="number" data-goal="500">0</span>
                     <span class="text">Money</span>
@@ -575,8 +575,8 @@
                 <h2>Reviews</h2>
                 <p>What People Are Saying</p>
             </div>
-            <div class="container">
-                <div class="card">
+            <div class="container grab">
+                <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
@@ -592,7 +592,7 @@
                         est natus quaerat ducimus
                     </p>
                 </div>
-                <div class="card">
+                <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
@@ -608,7 +608,7 @@
                         est natus quaerat ducimus
                     </p>
                 </div>
-                <div class="card">
+                <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
@@ -624,7 +624,7 @@
                         est natus quaerat ducimus
                     </p>
                 </div>
-                <div class="card">
+                <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>Mohamed Farag</h3>
                     <span class="title">Full Stack Developer</span>
