add general IE11 class, change footer clr

--- a/src/index.html
+++ b/src/index.html
@@ -491,7 +491,7 @@
                 </div>
             </div>
         </div>
-        <div class="pricing parent" id="pricing">
+        <div class="pricing parent is_ie" id="pricing">
             <div class="main-title"><h2>Pricing Plans</h2></div>
             <div class="container">
                 <div class="box from-left slide-in">
@@ -545,7 +545,7 @@
                 </div>
             </div>
         </div>
-        <div class="stats parent" id="stats">
+        <div class="stats parent is_ie" id="stats">
             <div class="main-title"><h2>Our Awesome Stats</h2></div>
             <div class="container">
                 <div class="box fade-in">
@@ -808,7 +808,7 @@
             </div>
         </div>
         <footer>
-            <div class="footer__main parent">
+            <div class="footer__main parent is_ie">
                 <div class="container">
                     <section class="img fade-in">
                         <img loading="lazy" src="./images/logo128.jpg" alt="IMO logo" />
