--- a/src/index.html
+++ b/src/index.html
@@ -928,5 +928,5 @@
             <a href="./google6e123ea99d179e07.html"></a>
         </footer>
     </body>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </html>
