edit reviews names

--- a/src/index.html
+++ b/src/index.html
@@ -578,8 +578,8 @@
             <div class="container grab">
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Mohamed Farag</h3>
-                    <span class="title">Full Stack Developer</span>
+                    <h3>John Cena</h3>
+                    <span class="title">American professional wrestler</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
@@ -594,8 +594,8 @@
                 </div>
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Mohamed Farag</h3>
-                    <span class="title">Full Stack Developer</span>
+                    <h3>Cristiano Ronaldo</h3>
+                    <span class="title">Portuguese footballer</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
@@ -610,8 +610,8 @@
                 </div>
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Mohamed Farag</h3>
-                    <span class="title">Full Stack Developer</span>
+                    <h3>Mohamed Allaoua</h3>
+                    <span class="title">Algerian singer</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
@@ -626,8 +626,8 @@
                 </div>
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Mohamed Farag</h3>
-                    <span class="title">Full Stack Developer</span>
+                    <h3>Vladimir Putin</h3>
+                    <span class="title">President of Russiar</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
