edit reviews again

--- a/src/index.html
+++ b/src/index.html
@@ -579,7 +579,7 @@
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
                     <h3>John Cena</h3>
-                    <span class="title">American professional wrestler</span>
+                    <span class="title">Professional wrestler</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
@@ -594,7 +594,7 @@
                 </div>
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Cristiano Ronaldo</h3>
+                    <h3>C. Ronaldo</h3>
                     <span class="title">Portuguese footballer</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
@@ -610,8 +610,8 @@
                 </div>
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Mohamed Allaoua</h3>
-                    <span class="title">Algerian singer</span>
+                    <h3>M. Allaoua</h3>
+                    <span class="title">Algerian Singer</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
@@ -626,8 +626,8 @@
                 </div>
                 <div class="card fade-in">
                     <img src="./images/Reviews/1.png" alt="person1" />
-                    <h3>Vladimir Putin</h3>
-                    <span class="title">President of Russiar</span>
+                    <h3>V. Putin</h3>
+                    <span class="title">Russia's president</span>
                     <div class="rate">
                         <i class="filled fas fa-star"></i>
                         <i class="filled fas fa-star"></i>
