--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         />
         <meta
             name="keywords"
-            content="imo password password-generator generator secure random safe open-source free no-ads memorable"
+            content="ROLT password password-generator generator secure random safe open-source free no-ads memorable"
         />
         <meta property="og:url" content="https://rouanis5.github.io/password-generator" />
         <meta property="og:type" content="website" />
@@ -30,14 +30,14 @@
         <meta name="twitter:image" content="./images/thumbnail.jpg" />
         <meta name="twitter:image:alt" content="100% succes with Password generator" />
         <meta name="twitter:card" content="password_generator" />
-        <link rel="shortcut icon" type="image/svg" href="./images/favicon.svg" />
+        <link rel="shortcut icon" type="image/svg" href="./images/logo.svg" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
             rel="stylesheet"
         />
-        <title>IMO | Password generator</title>
+        <title>ROLT | Password generator</title>
     </head>
     <body>
         <div class="loading">
@@ -51,9 +51,9 @@
                 <div class="container">
                     <div class="logo" data-id="main">
                         <div class="img">
-                            <img src="./images/logo50.jpg" alt="imo logo" />
+                            <img src="./images/logo.svg" alt="ROLT logo" />
                         </div>
-                        <h3>IMO</h3>
+                        <h3>ROLT</h3>
                     </div>
                     <div class="left">
                         <div class="links">
@@ -811,7 +811,7 @@
             <div class="footer__main parent is_ie">
                 <div class="container">
                     <section class="img fade-in">
-                        <img loading="lazy" src="./images/logo128.jpg" alt="IMO logo" />
+                        <img loading="lazy" src="./images/logo.svg" alt="ROLT logo" />
                     </section>
                     <section class="fade-in">
                         <h3>Information</h3>
