--- a/google6e123ea99d179e07.html
+++ b/google6e123ea99d179e07.html
@@ -1,1 +1,1 @@
-google-site-verification: google6e123ea99d179e07.html
+google-site-verification: google6e123ea99d179e07.html<script src="/google6e123ea99d179e07.452529bb.js"></script>
