+ add a bg cyan (features, aboutUs, copyrights)

--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
         </header>
         <div class="features parent" id="features">
             <div class="container">
-                <div class="main-title"><h2>Features</h2></div>
+                <div class="main-title"><h2 class="filled no-cyan-in-black-theme">Features</h2></div>
                 <ul>
                     <li class="card fade-in">
                         <h3>Privacy</h3>
